feat:1、 解决旋转屏幕导致卡死，2、去掉隐藏后台

--- a/app/src/main/assets/keep4_views/index.html
+++ b/app/src/main/assets/keep4_views/index.html
@@ -62,7 +62,7 @@
           <mdui-list-item id="hide-bg-item">
             <i class="iconfont icon-bxs-hide"></i>
             隐藏后台（从最近任务中隐藏）
-            <mdui-switch id="switch-hide" disabled checked slot="end-icon"></mdui-switch>
+            <mdui-switch id="switch-hide" disabled slot="end-icon"></mdui-switch>
           </mdui-list-item>
           <mdui-list-item class="github-item">
             <i class="iconfont icon-github-fill"></i>
